# HealthByte

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: eval_food.py  eval_recommender.py
infra/: deploy_lambda.md  iam-policy.json
lessons/: code_walkthrough.md  interview.md
src/: config.py
src/api/: main.py  schemas.py
src/data/: biometrics_schema.py  gfit_client.py  nutrition_table.py  prepare_food101.py
src/insights/: correlation_engine.py  recommender.py
src/models/: calorie_estimator.py  food_classifier.py  personalization.py  population_model.py
src/store/: schema.sql  timeseries.py
tests/: conftest.py  test_api.py  test_biometrics.py  test_calorie.py  test_correlation.py  test_store.py
ui/: index.html
web/: README.md
web/app/: README.md  index.html  metadata.json  package-lock.json
web/app/src/: App.tsx  constants.ts  index.css  types.ts
web/app/src/components/: BottomNav.tsx  GlassCard.tsx  KineticRings.tsx  TopBar.tsx
web/app/src/screens/: HomeScreen.tsx  LogScreen.tsx  PlanScreen.tsx  ProfileScreen.tsx  ScanScreen.tsx
web/v0-website/app/: globals.css  layout.tsx  page.tsx
web/v0-website/components/: dynamic-island.tsx  hero-card.tsx  macro-rings.tsx
web/v0-website/components/sections/: comparison.tsx  cta-banner.tsx  features-grid.tsx  footer.tsx  fusion-layer.tsx  hero.tsx  how-it-works.tsx  nutrition-engine.tsx  weekly-impact.tsx
